--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ body {
     transform: translateY(-15px);
     filter: none;
     cursor: pointer;
+    
 }
 
 
@@ -110,4 +111,19 @@ body {
     height: 200px;
     background-color: lightsalmon;
     border: 1px solid black;
+}
+
+.debug #ps5 {
+    height: 400px;
+    background-color: lightgreen;
+}
+
+.debug #ps5-info {
+    height: 500px;
+    background-color: lightpink;
+}
+
+.debug #ps5-image {
+    height: 500px;
+    background-color: lightskyblue;
 }
