--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@ body {
     font-size: 1.2em;
 }
 
+.gray-text {
+    color: gray;
+}
+
 /* / Common */
 
 #header-top {
@@ -76,12 +80,29 @@ body {
 #game-card img:hover {
     transform: translateY(-15px);
     filter: none;
-    cursor: pointer;
-    
+    cursor: pointer;    
 }
 
+#ps5-section p {
+    font-size: 24px;
+}
 
+#ps5-slider span {
+    font-size: 22px;
+}
 
+#ps5-card {
+    filter: opacity(70%);
+}
+
+#ps5-card:hover {
+    filter: opacity(100%);
+    border-bottom: 4px solid #0072CE;
+}
+
+#ps5-card-active {
+    border-bottom: 4px solid #0072CE;
+}
 
 /* Debug */
 
@@ -119,11 +140,17 @@ body {
 }
 
 .debug #ps5-info {
-    height: 500px;
+    height: 300px;
     background-color: lightpink;
 }
 
 .debug #ps5-image {
-    height: 500px;
+    height: 1000px;
     background-color: lightskyblue;
+}
+
+.debug #ps5-card {
+    height: 330px;
+    background-color: mediumseagreen;
+    border: 1px solid black;
 }
