--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -76,25 +76,25 @@ body {
     background-color: black;
 }
 
-#jumbo-logo img {
+.jumbo-logo img {
     width: 100%;
 }
 
-#game-card img {
+.game-card img {
     width: 100%;
     overflow: hidden;
     border-radius: 20px;
     filter: opacity(70%);
 }
 
-#game-card-active img {
+.game-card-active img {
     width: 100%;
     overflow: hidden;
     border-radius: 20px;
     box-shadow: 0 0 0 5px white, 0 0 0 10px #4799dc;
 }
 
-#game-card img:hover {
+.game-card img:hover {
     transform: translateY(-15px);
     filter: none;
     cursor: pointer;    
@@ -108,16 +108,16 @@ body {
     font-size: 22px;
 }
 
-#ps5-card {
+.ps5-card {
     filter: opacity(70%);
 }
 
-#ps5-card:hover {
+.ps5-card:hover {
     filter: opacity(100%);
     border-bottom: 4px solid #0072CE;
 }
 
-#ps5-card-active {
+.ps5-card-active {
     border-bottom: 4px solid #0072CE;
 }
 
@@ -135,11 +135,11 @@ body {
     background-color: #1f1f1f;
 }
 
-#new-game-card {
+.new-game-card {
     cursor: pointer;
 }
 
-#new-game-card img {
+.new-game-card img {
     border-radius: 25px;
 }
 
@@ -148,7 +148,7 @@ body {
     background-color: #BEBCBB;
 }
 
-#jumbo-plus-img {
+.jumbo-plus-img {
     height: 60vh;
 }
 
@@ -165,14 +165,11 @@ body {
     width: 200px;
 }
 
-
-
 /* Footer */
 
 footer {
     background-color:#00439C;
 }
-
 
 /* / Footer */
 
@@ -186,12 +183,12 @@ footer {
     background-color: lightcoral;
 }
 
-.debug #jumbo-logo {
+.debug .jumbo-logo {
     height: 100px;
     background-color: lightgreen;
 }
 
-.debug #jumbo-text {
+.debug .jumbo-text {
     height: 200px;
     background-color: lightgrey;
 }
@@ -200,7 +197,7 @@ footer {
     background-color: lightseagreen;
 }
 
-.debug #game-card {
+.debug .game-card {
     height: 200px;
     background-color: lightsalmon;
     border: 1px solid black;
@@ -211,23 +208,23 @@ footer {
     background-color: lightgreen;
 }
 
-.debug #ps5-info {
+.debug .ps5-info {
     height: 300px;
     background-color: lightpink;
 }
 
-.debug #ps5-image {
+.debug .ps5-image {
     height: 1000px;
     background-color: lightskyblue;
 }
 
-.debug #ps5-card {
+.debug .ps5-card {
     height: 330px;
     background-color: mediumseagreen;
     border: 1px solid black;
 }
 
-.debug #new-game-card {
+.debug .new-game-card {
     background-color: aquamarine;
     border: 1px solid white;
     height: 300px;
