--- a/BONUS/css/style.css
+++ b/BONUS/css/style.css
@@ -74,6 +74,10 @@ body {
     margin-left: -1em;
 }
 
+.my_drop_shadow {
+    box-shadow: 0 10px 0 0 rgba(0, 0, 0, 0.2), 0 10px 0 0 rgba(0, 0, 0, 0.19);
+}
+
 .my_submenu_hover:hover {
     cursor: pointer;
     border-radius: 10px;
